Support black-first FEN positions with extra engine and refactor GameServiceImpl
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>